XSensor/Peloton-20220817/Peloton-20220817/XSCore90.h


typedef bool XBOOL;
enum XBOOL_VALUES
{
	xFALSE = false,
	xTRUE = true
};
typedef uint64_t SENSORPID;
enum EPressureUnit
{
	ePRESUNIT_MMHG = 0,	
	ePRESUNIT_INH2O,	
	ePRESUNIT_PSI,		
	ePRESUNIT_KPA,		
	ePRESUNIT_KGCM2,	
	ePRESUNIT_ATM,		
	ePRESUNIT_NCM2,		
	ePRESUNIT_MBAR,		
	ePRESUNIT_NM2,		
	ePRESUNIT_GCM2,		
	ePRESUNIT_BAR,		
	ePRESUNIT_RAW = 255
};
enum EXSErrorCodes
{
	eXS_ERRORCODE_OK,							
	eXS_ERRORCODE_LIBRARY_NOT_INITIALIZED,		
	eXS_ERRORCODE_BADPARAMETER_OUTOFRANGE,		
	eXS_ERRORCODE_BADPARAMETER_NULL,			
	eXS_ERRORCODE_BADPARAMETER_INVALID_SENSOR_PID,	
	eXS_ERRORCODE_BADPARAMETER_BUFFERTOOSMALL,	
	eXS_ERRORCODE_CREATEFOLDER_NOPERMISSION,	
	eXS_ERRORCODE_CALFILE_LOADFAILED,			
	eXS_ERRORCODE_CALFILE_DOESNOTMATCHSENSOR,	
	eXS_ERRORCODE_CONFIGURATION_NOTCOMPLETE,	
	eXS_ERRORCODE_CONFIGURATION_NOSENSORS,		
	eXS_ERRORCODE_CONFIGURATION_FAILCREATEXSN,	
	eXS_ERRORCODE_AUTOCONFIG_SENSORNOTFOUND,	
	eXS_ERRORCODE_SENSORS_SENSORNOTFOUND,		
	eXS_ERRORCODE_SENSORS_RAWONLY,				
	eXS_ERRORCODE_SENSORS_NOSAMPLE,				
	eXS_ERRORCODE_SENSORS_CONNECTIONLOST,		
	eXS_ERRORCODE_SENSORS_SAMPLETIMEOUT,		
	eXS_ERRORCODE_SENSORS_SAMPLEFAILED,			
	eXS_ERRORCODE_SENSORS_NOCONNECTION,			
	eXS_ERRORCODE_SENSORS_CONNECTFAILED,		
	eXS_ERRORCODE_SENSORS_COMMANDFAILED,		
	eXS_ERRORCODE_MEMORYALLOCATION_FAILED,		
	eXS_ERRORCODE_COULDNOTCREATECAPTUREFILE,	
	eXS_ERRORCODE_SIMFILE_LOADFAIL,				
	eXS_ERRORCODE_SIM_FUNCTION_NA,				
	eXS_ERRORCODE_SIM_CALIBRATED_ONLY,			
	eXS_ERRORCODE_SIM_RAW_ONLY,					
	eXS_ERRORCODE_MANCAL_FUNCTION_NOTSET,		
	eXS_ERRORCODE_MANCAL_FUNCTION_NA,			
	eXS_ERRORCODE_CALIBRATION_AUTOCACHE,		
	eXS_ERRORCODE_X4CONFIGSCRIPT_COULDNOTOPEN,	
	eXS_ERRORCODE_X4CONFIGSCRIPT_BADRESPONSE,	
	eXS_ERRORCODE_X4SPKNOTCOMPATIBLEWITHCALFILE, 
	eXS_ERRORCODE_FAIL_X4REMOTE_ACTIVE,			
	eX4_ERRORCODE_FAIL_LOCAL_ACTIVE,			
	eX4_ERRORCODE_DOWNLOAD_INTERRUPTED,			
	eX4_ERRORCODE_UPLOAD_INTERRUPTED,			
	eX4_ERRORCODE_SESSIONINDEX_OUTOFBOUNDS,		
	eX4_ERRORCODE_RECORDINGINPROGRESS,			
	eX4_ERRORCODE_REMOTENOTOPEN,				
	eX4_ERRORCODE_REMOTERECORD_STARTFAIL,		
};
extern "C" XSCORE_API EXSErrorCodes XS_GetLastErrorCode();
extern "C" XSCORE_API XBOOL XS_InitLibrary(XBOOL bThreadMode);
extern "C" XSCORE_API XBOOL XS_AutoConfig(uint8_t pressureUnits = ePRESUNIT_MMHG, float targetPressure = -1.0f);
extern "C" XSCORE_API XBOOL XS_ConfigComplete();
extern "C" XSCORE_API void XS_SetPressureUnit(uint8_t PressureUnit);
extern "C" XSCORE_API uint8_t XS_GetPressureUnit();
extern "C" XSCORE_API uint32_t XS_GetReadTimeout();
extern "C" XSCORE_API void XS_SetOverlapMode(XBOOL bOverlap);
extern "C" XSCORE_API XBOOL XS_GetOverlapMode();
extern "C" XSCORE_API void XS_SetAllowWireless(XBOOL bAllow);
extern "C" XSCORE_API XBOOL XS_GetAllowWireless();
extern "C" XSCORE_API void XS_SetAllowX4(XBOOL bAllow);
extern "C" XSCORE_API XBOOL XS_GetAllowX4();
extern "C" XSCORE_API void XS_SetAllowX4Wireless(XBOOL bAllow);
extern "C" XSCORE_API XBOOL XS_GetAllowX4Wireless();
extern "C" XSCORE_API void XS_SetX4Mode8Bit(XBOOL bEnable8BitMode);
extern "C" XSCORE_API XBOOL XS_GetX4Mode8Bit();
extern "C" XSCORE_API XBOOL XS_HasHardwareIMU(SENSORPID spid);
extern "C" XSCORE_API void XS_SetEnableIMU(XBOOL bEnable);
extern "C" XSCORE_API XBOOL XS_GetEnableIMU();
extern "C" XSCORE_API void XS_SetStreamingMode(XBOOL bStreaming, uint16_t streamingMaxFrameCache);
extern "C" XSCORE_API XBOOL XS_GetStreamingMode();
extern "C" XSCORE_API void XS_SetSampleAverageCount(uint16_t nCount);
extern "C" XSCORE_API uint16_t XS_GetSampleAverageCount();
extern "C" XSCORE_API XBOOL XS_OpenConnection(uint32_t nThreadedFramesPerMinute=0);
extern "C" XSCORE_API XBOOL XS_IsConnectionOpen();
extern "C" XSCORE_API XBOOL XS_CloseConnection();
extern "C" XSCORE_API XBOOL XS_IsConnectionThreaded();
extern "C" XSCORE_API XBOOL XS_SetNoiseThreshold(float threshold);
extern "C" XSCORE_API float XS_GetNoiseThreshold();
extern "C" XSCORE_API XBOOL XS_Sample();
extern "C" XSCORE_API XBOOL XS_GetSampleTimestampUTC(
	uint16_t& year, uint8_t& month, uint8_t& day, 
	uint8_t& hour, uint8_t& minute, uint8_t& second, uint16_t& millisecond);
extern "C" XSCORE_API XBOOL XS_GetSampleTimestampExUTC(
	uint16_t& year, uint8_t& month, uint8_t& day, 
	uint8_t& hour, uint8_t& minute, uint8_t& second, 
	uint16_t& millisecond, uint16_t& microsecond, bool bAsLocalTime);
extern "C" XSCORE_API XBOOL XS_GetPressure(SENSORPID spid, float* pData);
extern "C" XSCORE_API XBOOL XS_GetPressureSafe(SENSORPID spid, uint32_t dataCount, float data[]);
extern "C" XSCORE_API XBOOL XS_GetRawSafe(SENSORPID spid, uint32_t dataCount, uint16_t data[]);
extern "C" XSCORE_API XBOOL XS_GetIMU(
	SENSORPID spid,
	float& qx, float& qy, float& qz, float& qw,
	float& ax, float& ay, float& az,
	float& gx, float& gy, float& gz);
extern "C" XSCORE_API XBOOL XS_GetHardwareFrameState(
	SENSORPID spid,
	uint32_t& sequence, uint32_t& ticks);