XSensor/Peloton-20220817/Peloton-20220817/wrappers/c-sharp/XSCore90.cs


        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern uint XS_GetReadTimeout();
        // returns the sample timeout period in seconds


        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XS_SetOverlapMode(xbool bOverlap);
        // When sampling with two or more sensors and if the sensors are physically
        // overlapping, turn this mode on to ensure there is no electrical interference between
        // the sensors.
        //
        // Note this causes each sensor to be sampled in series (instead of in parallel), thus
        // there is often a reduction in net sampling speed.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetOverlapMode();
        // returns boolTRUE when Overlap mode is on.  Overlap mode is off by default.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XS_SetAllowWireless(xbool bAllow);
        // allows use of the X3 wireless series
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetAllowWireless();

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XS_SetAllowX4(xbool bAllow);
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetAllowX4();
        // allows use of the X4 sensor series (wired)

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XS_SetAllowX4Wireless(xbool bAllow);
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetAllowX4Wireless();
        // allows use of the X4 sensor series (wireless)


        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XS_SetX4Mode8Bit(xbool b8BitMode);
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetX4Mode8Bit();
        // set the X4 in 8 bit mode (lower precision, but faster wireless transmit)

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_HasHardwareIMU(SENSORPID spid);
        // determines if the sensor has IMU capability

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_SetEnableIMU(xbool bEnable);
        // enable IMU packets if available - does this for all configured sensors. Must call before the OpenConnection

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetEnableIMU();
        // return true if IMU is enabled for the current configuration


        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XS_SetStreamingMode(xbool bStreaming);
        // If you are sampling below 10 Hz, set this mode to xbool.FALSE, otherwise set to xbool.TRUE for better sample rates

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetStreamingMode();
        // returns boolTRUE if streaming mode is on, boolFALSE otherwise.  This is off by default.        

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XS_SetSampleAverageCount(short nCount);
        // Set the number of readings the hardware will perform on each sensel.
        // Valid numbers are 1, 2, 4, 8 and 16
        //
        // This averaging occurs within the sensor's DPS hardware. Higher cycles lead to slower
        // frame rates, but may produce more accurate readings.
        //
        // X4 sensors can only run at 4 and 8 cycles. X4 foot sensors run fastest with 4 cycles.
        //
        // This value can only be set before calling any of the XS_AutoConfig* functions, or XS_ConfigComplete()
        // Typically you don't need to set this as the sensor is normally programmed with an expected default.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern short XS_GetSampleAverageCount();
        // returns the number of readings the hardware will perform on each sensel.  Each reading is
        // averaged together.  Default is 1 which means no averaging.  Hardware supports: 1,2,4,8,16 samples being averaged.


        // ===========================================================================
        //	Connection management
        // ===========================================================================

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_OpenConnection(uint nThreadedFramesPerMinute = 0);
        //
        // Opens the sensors in the sample configuration and readies them for sampling.
        //
        // Call this only after a call to XS_ConfigComplete() or XS_AutoConfig*()
        //
        // nThreadedFramesPerMinute
        //	- When using the DLL in threaded mode (ie: XS_InitLibrary(boolTRUE)),
        //    this specifies the target frame rate in frames per minute. eg: 600 FPM = 10 Hz
        //
        //    The actual rate may be slower depending on the sensor configuration and
        //    the PC's USB subsystem. This field is ignored when XS_InitLibrary(boolFALSE)
        //	  is called.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_IsConnectionOpen();
        // returns boolTRUE if the connection is open.
        //
        // Typically this function returns boolFALSE when a sensor is disconnected, or
        // the sensor is in use by another program.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_CloseConnection();
        // closes the connection - this releases the sensors and allows other applications to talk to them.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_IsConnectionThreaded();
        // Returns xTRUE if the connection is open and the connection is running in an asynchronous threaded mode.


        // ===========================================================================
        //	Sampling functions
        // ===========================================================================

        // Returns the threshold below which pressure is zeroed.
        // a return of -1.0f indicates the function failed. Check XS_GetLastErrorCode.
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern float XS_GetNoiseThreshold();

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_SetNoiseThreshold(float nThreshold);
        // Sets a pressure threshold, below which any readings are zeroed. The threshold is applied
        // to all configured sensors.
        //
        // The default threshold is normally the lowest calibrated pressure of all configured sensors.
        //
        // nThreshold - The threshold must be in the same pressures units as is returned by XS_GetPressureUnit()

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_Sample();
        // Ask the sensor(s) to record a new sample (a pressure map) to an internal buffer.
        // Use XS_GetPressure() to retrieve the pressure map from the internal buffer.
        //
        // When using the library in a threaded mode, this call returns immediately. 
        // However, the internal buffer may or may not have a new sample as it only updates
        // when a new one is available. Check the timestamp to see if it has changed.
        //
        // When not using threaded mode, this call blocks until a sample is recorded or
        // a read timeout occurs.

        // Fetch the timestamp (UTC time) of the last sample obtained from a call to XS_Sample().

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetSampleTimestampUTC(ref ushort year, ref byte month, ref byte day, ref byte hour, ref byte minute, ref byte second, ref ushort millisecond);
        // Same as XS_GetSampleTime(), but separates the date/time components.
        // Fetch the timestamp components (UTC time). month (1-12), day (1-31). Hour is (0-23), minute and second (0-59), millisecond (0-999)

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetSampleTimestampExUTC(
	        ref ushort year, ref byte month, ref byte day, 
	        ref byte hour, ref byte minute, ref byte second, ref ushort millisecond, ref ushort microsecond, bool bAsLocalTime);
        // includes microseconds when supported by the sensor hardware. This version allows conversion of the timestamp to the local timezone.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetPressureSafe(SENSORPID spid, uint nDataSize, float[] data);
        // Retrieves the calibrated sample data for a single sensor from the DLL's internal buffer and populates the supplied output buffer.
        // ( The internal buffer is only populated and changed via a call to XS_Sample() )
        // The pressure readings are in the units set by XS_SetPressureUnit() or XS_AutoConfig()
        //
        // pData - the output buffer should be large enough to hold (rows X columns) elements of sizeof(uint16_t).
        //		Where rows and columns are the dimensions of the sensor.
        //		The array is organized in a typical row-major order. IE:The first N values in the array correspond 
        //		to the first row, where N is the number of columns.
        //

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetRawSafe(SENSORPID spid, uint nDataSize, ushort[] data);
        // Similar to XS_GetPressureSafe(), except it takes an array of uint16_t and returns uncalibrated raw 16 bit values from the sensor.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetIMU(SENSORPID spid,
                                                ref float qx, ref float qy, ref float qz, ref float qw,
                                                ref float ax, ref float ay, ref float az,
                                                ref float mx, ref float my, ref float mz);
        // retrieves any IMU data if present for the current sample

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetHardwareFrameState(SENSORPID spid, ref uint sequence, ref uint ticks);
        // Retrieves the hardware frame header state. 'sequence' increments (and wrapsaround) for each frame. 'ticks' is milliseconds for X4
        // returns xFALSE if there is no hardware state, or an error has occured

        /* internal functions

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_OpenConnectionX4Script(string szConfigScript, uint frame);

                [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
                public static extern xbool XS_SetDiagnosticIMU(xbool bEnable);
                // enable retrieval of the calibrated magnetometer triad
